--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,10 @@
 {
     "require": {
         "phpmailer/phpmailer": "^6.8",
-      "ext-pdo": "*"
+        "ext-pdo": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.2",
+        "ext-mbstring": "*"
     }
 }
